--- a/index.html
+++ b/index.html
@@ -372,10 +372,10 @@
   				</div>
 
     			<div class="col-md-8">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/p3.png);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/Screenshot 2025-03-01 172402.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="http://localservicehub.infinityfreeapp.com/">Click Me!</a></h3>
+	    					<h3><a href="https://82pareshpatil.github.io/Krishimitra-Ai/">Click Me!</a></h3>
 	    					<span>Web Design</span>
 	    				</div>
     				</div>
