--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@ This experience deepened my interest in web development and gave me hands-on exp
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
           </div>
         </div>
-        <!-- <div class="row d-flex">
+        <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <a href="single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
@@ -654,7 +654,7 @@ This experience deepened my interest in web development and gave me hands-on exp
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
       </div>
     </section>
 
