--- a/index.html
+++ b/index.html
@@ -593,70 +593,75 @@ This experience deepened my interest in web development and gave me hands-on exp
     </section>
 
 
-    <section class="ftco-section" id="blog-section">
-      <div class="container">
-        <div class="row justify-content-center mb-5 pb-5">
-          <div class="col-md-7 heading-section text-center ftco-animate">
-            <h1 class="big big-2">Blog</h1>
-            <h2 class="mb-4">Our Blog</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-          </div>
-        </div>
-        <div class="row d-flex">
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-              	<div class="d-flex align-items-center mb-3 meta">
-	                <p class="mb-0">
-	                	<span class="mr-2">June 21, 2019</span>
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-	                </p>
-                </div>
-                <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-              	<div class="d-flex align-items-center mb-3 meta">
-	                <p class="mb-0">
-	                	<span class="mr-2">June 21, 2019</span>
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-	                </p>
-                </div>
-                <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry">
-              <a href="single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-              	<div class="d-flex align-items-center mb-3 meta">
-	                <p class="mb-0">
-	                	<span class="mr-2">June 21, 2019</span>
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-	                </p>
-                </div>
-                <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+	<section class="ftco-section" id="blog-section">
+		<div class="container">
+		  <div class="row justify-content-center mb-5 pb-5">
+			<div class="col-md-7 heading-section text-center ftco-animate">
+			  <h1 class="big big-2">Blog</h1>
+			  <h2 class="mb-4">Our Media</h2>
+			  <p>Explore my latest content including videos and snapshots from projects and tech talk.</p>
+			</div>
+		  </div>
+		  <div class="row d-flex">
+	  
+			<!-- YouTube Video 1 -->
+			<div class="col-md-6 d-flex ftco-animate">
+			  <div class="blog-entry">
+				<div class="block-20">
+				  <iframe width="100%" height="315" src="https://youtu.be/dkhuH0089b4?feature=shared" 
+					title="AI Voice Agent" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					allowfullscreen></iframe>
+				</div>
+				<div class="text mt-3">
+				  <h3 class="heading">Prgya Ai</h3>
+				  <p>AI Voice Agent for Education using || Next.js, React, Tailwind CSS, Convex, ElevenLabs.</p>
+				</div>
+			  </div>
+			</div>
+	  
+			<!-- YouTube Video 2 -->
+			<div class="col-md-6 d-flex ftco-animate">
+			  <div class="blog-entry">
+				<div class="block-20">
+				  <iframe width="100%" height="315" src="https://www.youtube.com/embed/VIDEO_ID_2" 
+					title="YouTube video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					allowfullscreen></iframe>
+				</div>
+				<div class="text mt-3">
+				  <h3 class="heading">Tech Talk Clip</h3>
+				  <p>Sharing insights about frontend frameworks and real-world application.</p>
+				</div>
+			  </div>
+			</div>
+	  
+			<!-- Image 1 -->
+			<div class="col-md-6 d-flex ftco-animate mt-4">
+			  <div class="blog-entry">
+				<a href="images/project1-full.jpg" class="block-20" style="background-image: url('images/project1-thumb.jpg');">
+				</a>
+				<div class="text mt-3">
+				  <h3 class="heading">UI Snapshot</h3>
+				  <p>Preview of a custom UI made with Tailwind and Shadcn.</p>
+				</div>
+			  </div>
+			</div>
+	  
+			<!-- Image 2 -->
+			<div class="col-md-6 d-flex ftco-animate mt-4">
+			  <div class="blog-entry">
+				<a href="images/project2-full.jpg" class="block-20" style="background-image: url('images/project2-thumb.jpg');">
+				</a>
+				<div class="text mt-3">
+				  <h3 class="heading">Dashboard View</h3>
+				  <p>Interactive admin dashboard for service hub project.</p>
+				</div>
+			  </div>
+			</div>
+	  
+		  </div>
+		</div>
+	  </section>
+	  
 
     <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
     	<div class="container">
