--- a/index.html
+++ b/index.html
@@ -599,61 +599,56 @@ This experience deepened my interest in web development and gave me hands-on exp
 			<div class="col-md-7 heading-section text-center ftco-animate">
 			  <h1 class="big big-2">Blog</h1>
 			  <h2 class="mb-4">Our Media</h2>
-			  <p>Explore my latest content including videos and snapshots from projects and tech talk.</p>
+			  <p>Explore video highlights and snapshots from my projects and experiences.</p>
 			</div>
 		  </div>
+	  
 		  <div class="row d-flex">
 	  
-			<!-- YouTube Video 1 -->
+			<!-- YouTube Video 1: Pragya AI -->
 			<div class="col-md-6 d-flex ftco-animate">
 			  <div class="blog-entry">
-				<div class="block-20">
-				  <iframe width="100%" height="315" src="https://youtu.be/dkhuH0089b4?feature=shared" 
-					title="AI Voice Agent" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-					allowfullscreen></iframe>
-				</div>
+				<a href="https://youtu.be/dkhuH0089b4?feature=shared" target="_blank" class="block-20" style="background-image: url('images/new.jpg'); background-size: cover;">
+				</a>
 				<div class="text mt-3">
-				  <h3 class="heading">Prgya Ai</h3>
-				  <p>AI Voice Agent for Education using || Next.js, React, Tailwind CSS, Convex, ElevenLabs.</p>
+				  <h3 class="heading">Pragya AI</h3>
+				  <p>AI Voice Agent for Education using Next.js, React, Tailwind CSS, Convex, and ElevenLabs.</p>
 				</div>
 			  </div>
 			</div>
 	  
-			<!-- YouTube Video 2 -->
+			<!-- YouTube Video 2: Krishimitra AI -->
 			<div class="col-md-6 d-flex ftco-animate">
 			  <div class="blog-entry">
-				<div class="block-20">
-				  <iframe width="100%" height="315" src="https://www.youtube.com/embed/VIDEO_ID_2" 
-					title="YouTube video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-					allowfullscreen></iframe>
-				</div>
+				<a href="https://youtu.be/t0Bds-y_o7c?feature=shared" target="_blank" class="block-20" style="background-image: url('images/fact.jpg'); background-size: cover;">
+				</a>
 				<div class="text mt-3">
-				  <h3 class="heading">Tech Talk Clip</h3>
-				  <p>Sharing insights about frontend frameworks and real-world application.</p>
+				  <h3 class="heading">Krishimitra AI</h3>
+				  <p>Reality Of Indian Agriculture System || #indian #indianagriculture #youtube</p>
 				</div>
 			  </div>
 			</div>
 	  
-			<!-- Image 1 -->
+			<!-- Image 1: Krishimitra Ground Zero -->
 			<div class="col-md-6 d-flex ftco-animate mt-4">
 			  <div class="blog-entry">
-				<a href="images/project1-full.jpg" class="block-20" style="background-image: url('images/project1-thumb.jpg');">
+				<a href="images/interview 3.png" class="block-20" style="background-image: url('images/interview\ 3.png'); background-size: cover;">
 				</a>
 				<div class="text mt-3">
-				  <h3 class="heading">UI Snapshot</h3>
-				  <p>Preview of a custom UI made with Tailwind and Shadcn.</p>
+				  <h3 class="heading">Krishimitra AI – Ground Zero Interview</h3>
+				  <p>Captured insights from the ground reality of Indian farmers, discussing how Krishimitra AI aims to solve their real-world challenges.</p>
 				</div>
 			  </div>
 			</div>
 	  
-			<!-- Image 2 -->
+			<!-- Image 2: DevHeat Hackathon -->
 			<div class="col-md-6 d-flex ftco-animate mt-4">
 			  <div class="blog-entry">
-				<a href="images/project2-full.jpg" class="block-20" style="background-image: url('images/project2-thumb.jpg');">
+				<a href="images/hack.jpeg" class="block-20" style="background-image: url('images/hack.jpeg'); background-size: cover;">
 				</a>
 				<div class="text mt-3">
-				  <h3 class="heading">Dashboard View</h3>
-				  <p>Interactive admin dashboard for service hub project.</p>
+				  <h3 class="heading">Pragya AI at DevHeat Hackathon – IIIT Surat</h3>
+				  <p>We’re proud to have participated in the final round of the DevHeat Hackathon at IIIT Surat with our project – Pragya AI. Grateful for the experience, energy, and opportunity to present our work. This is just the beginning!</p>
 				</div>
 			  </div>
 			</div>
@@ -661,6 +656,7 @@ This experience deepened my interest in web development and gave me hands-on exp
 		  </div>
 		</div>
 	  </section>
+	  
 	  
 
     <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
