--- a/index.html
+++ b/index.html
@@ -37,6 +37,23 @@
             height: 100vh;
             background-color: #f0f0f0;
         } */
+		html, body {
+  height: auto !important;
+  overflow-x: hidden !important;
+  overflow-y: auto !important;
+}
+
+.js-fullheight {
+  height: 100vh !important;
+}
+
+.slider-item,
+.owl-carousel,
+.js-fullheight {
+  touch-action: auto !important;
+  -ms-touch-action: auto !important;
+  overscroll-behavior: auto !important;
+}
 
         .unique-card-wrapper {
             position: relative;
@@ -857,7 +874,18 @@ This experience deepened my interest in web development and gave me hands-on exp
 
   <!-- loader -->
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
-
+  <script>
+	function updateFullHeight() {
+	  document.querySelectorAll('.js-fullheight').forEach(el => {
+		el.style.height = window.innerHeight + 'px';
+	  });
+	}
+  
+	window.addEventListener('resize', updateFullHeight);
+	window.addEventListener('load', updateFullHeight);
+	document.addEventListener('DOMContentLoaded', updateFullHeight);
+  </script>
+  
 
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
