--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@ This experience deepened my interest in web development and gave me hands-on exp
 
         <div class="row no-gutters block-9">
           <div class="col-md-6 order-md-last d-flex">
-            <form action="https://formspree.io/f/mldenzna" class="bg-light p-4 p-md-5 contact-form">
+            <form action="https://formspree.io/f/mldenzna" class="bg-light p-4 p-md-5 contact-form" method="POST">
               <div class="form-group">
                 <input type="text" class="form-control" placeholder="Your Name">
               </div>
